# openshots

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index-preview.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation-and-capture/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  RESEARCH.md
.planning/phases/02-canvas-editor/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-UAT.md  RESEARCH.md
.planning/phases/05-rendering-fixes-and-stability/: 05-01-SUMMARY.md  05-02-SUMMARY.md
.planning/phases/06-complete-editor/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-05-PLAN.md  06-05-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: App.tsx  index.css  preview-entry.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: annotations.rs  lib.rs  main.rs  presets.rs  processing.rs  render.rs
src-tauri/src/commands/: capture.rs  export.rs  mod.rs  preview.rs  share.rs  tray.rs
src/components/canvas/: AnnotationLayer.tsx  BackgroundLayer.tsx  CanvasStage.tsx  ContextMenu.tsx  CropOverlay.tsx  GuidesLayer.tsx  PrivacyLayer.tsx  RemovalOverlay.tsx  ScreenshotLayer.tsx
src/components/capture/: CountdownOverlay.tsx  CrosshairOverlay.tsx  RegionOverlay.tsx  WindowPicker.tsx
src/components/composition/: DeviceMockup.tsx  WindowChrome.tsx  frames.ts
src/components/panels/: AspectRatioPanel.tsx  (+5 more)
src/hooks/: useCaptureFlow.ts  useHotkeys.ts  useSelectionBounds.ts
src/ipc/: capture.ts  export.ts  share.ts
src/lib/: aspectRatios.ts  auto-save.ts  colorAnalysis.ts  default-presets.ts  fanLayout.ts  project-file.ts  recent-projects.ts  retina.ts  version.ts
src/stores/: app.store.ts  canvas.store.ts  preset.store.ts  tool.store.ts
www/: index.html
(+15 files in other folders)
