[package]
name = "openshots"
version = "1.0.2"
edition = "2021"

[lib]
name = "openshots_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
xcap = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", features = ["png", "jpeg"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
